@@ -16,6 +16,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+        unitTests.all {
+            jvmArgs '-XX:MaxPermSize=256m'
+        }
+    }
 }
 
 repositories {
@@ -28,6 +35,6 @@ dependencies {
     compile 'com.github.nkzawa:socket.io-client:0.3.0'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.mcxiaoke.volley:library:1.0.18'
-    testCompile "org.robolectric:robolectric:3.0"
+    testCompile 'org.mockito:mockito-core:1.10.19'
     testCompile 'junit:junit:4.12'
 }
